# cbr-custom--probely

./: README.md  pyproject.toml
.github/actions/deploy-cbr-custom-site/: action.yml
.github/actions/deploy-cbr-dev-site/: action.yml
.github/workflows/: ci-pipeline__dev.yml  ci-pipeline__main.yml  ci-pipeline__qa.yml
cbr_custom/custom/cbr_static/content/en/web-pages/: cbr-custom.md
cbr_custom_probely/custom/cbr_static/content/en/web-pages/: cbr-custom.md
cbr_custom_probely/utils/: Version.py
deploy/docker/cbr_custom/: Dockerfile  cbr_custom__run_locally.sh  docker-compose.yml
tests/unit/utils/: test_Version.py
