[tool.poetry]
name        = "cbr_custom"
version     = "v0.1.1"
description = "CBR - Custom"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "MIT"
readme      = "README.md"
homepage    = "https://github.com/the-cyber-boardroom/cbr-custom"
repository  = "https://github.com/the-cyber-boardroom/cbr-custom"

[tool.poetry.dependencies]
python          = "^3.7"
osbot-utils     = "*"


[build-system]
requires        = ["poetry-core>=1.0.0"]
build-backend   = "poetry.core.masonry.api"
